@@ -6,6 +6,7 @@ December 11, 2012
 * "warning treated as error" is a one-off error
 * Listen for issues reported by StringTemplate, report them as warnings
 * Fix template issues
+* GrammarASTWithOptions.getOptions never returns null
 
 December 2, 2012
 
